Fix double flash on page load due to invalid HTML in light/dark mode selector

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -211,6 +211,8 @@ img {
 }
 
 .modeContainer {
+  display: inline-block;
+  vertical-align: middle;
   width: 24px;
   height: 24px;
 }
